--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F2F2F2"
     tools:context=".LoginActivity">
-    <!-- Hình ổ khoá -->
+
+    <!-- Ổ khóa -->
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="120dp"
@@ -16,8 +19,7 @@
         android:layout_marginTop="60dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="DuplicateIds" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Email -->
     <EditText
@@ -47,6 +49,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.8" />
 
+    <!-- Nút Login -->
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="0dp"
@@ -62,7 +65,7 @@
         app:layout_constraintEnd_toStartOf="@id/btnRegister"
         app:layout_constraintWidth_percent="0.39" />
 
-    <!-- REGISTER Button -->
+    <!-- Nút Register -->
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="0dp"
@@ -78,7 +81,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.39" />
 
-    <!-- Forgot password -->
+    <!-- Text Forgot password -->
     <TextView
         android:id="@+id/textViewForgot"
         android:layout_width="wrap_content"
@@ -90,6 +93,5 @@
         app:layout_constraintTop_toBottomOf="@id/btnLogin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
