--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,11 +9,11 @@
 
         <!-- Hình ổ khoá -->
         <ImageView
-            android:id="@+id/imageViewRegister"
+            android:id="@+id/imageViewLogo"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:src="@android:drawable/ic_lock_lock"
-            android:contentDescription="Register Icon"
+            android:src="@drawable/logo"
+            android:contentDescription="App Logo"
             android:layout_marginTop="60dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
             android:backgroundTint="#000000"
             android:inputType="textPersonName"
             android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@id/imageViewRegister"
+            app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintWidth_percent="0.8" />
