--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/nav_home"     android:title="Trang chủ" android:icon="@drawable/ic_home"/>
-    <item android:id="@+id/nav_products" android:title="Sản phẩm"  android:icon="@drawable/ic_bell"/>
-    <item android:id="@+id/nav_cart"     android:title="Hồ sơ"      android:icon="@drawable/ic_cart"/>
+    <item android:id="@+id/nav_home"     android:title="Trang chủ" android:icon="@drawable/ic_home_24"/>
+    <item android:id="@+id/nav_products" android:title="Sản phẩm"  android:icon="@drawable/ic_grid_24"/>
+    <item android:id="@+id/nav_cart"     android:title="Hồ sơ"      android:icon="@drawable/ic_profile_24"/>
 </menu>
