--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.DaHongHieu_2122110267" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.VanBaLiem_2122110304" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
     <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
